--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-responsive": "^8.2.0",
     "react-scripts": "4.0.2",
     "react-scroll": "^1.8.1",
+    "react-spring": "^8.0.27",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
