--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "emailjs-com": "^2.6.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-responsive": "^8.2.0",
     "react-scripts": "4.0.2",
     "react-scroll": "^1.8.1",
+    "react-spinners": "^0.10.6",
     "react-spring": "^8.0.27",
     "web-vitals": "^1.1.0"
   },
